[gd_scene load_steps=6 format=3 uid="uid://cxfafl1sdl718"]

[ext_resource type="Script" path="res://scene/pemburu/hewan.gd" id="1_2jhsb"]
[ext_resource type="Texture2D" uid="uid://der6fweasklmr" path="res://asset/dodge_the_creeps_2d_assets/art/enemyWalking_1.png" id="2_eu0a8"]
[ext_resource type="Texture2D" uid="uid://bvryf6h7k4juf" path="res://asset/dodge_the_creeps_2d_assets/art/enemyWalking_2.png" id="3_gp2un"]

[sub_resource type="SpriteFrames" id="SpriteFrames_p2euy"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_eu0a8")
}, {
"duration": 1.0,
"texture": ExtResource("3_gp2un")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_gdc0o"]
radius = 47.0
height = 132.0

[node name="hewan" type="RigidBody2D"]
rotation = -1.5708
collision_mask = 0
gravity_scale = 0.0
script = ExtResource("1_2jhsb")
metadata/_edit_group_ = true

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_p2euy")

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
scale = Vector2(3.58873, 2.3519)

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_gdc0o")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
rotation = 1.5708
scale = Vector2(0.5, 0.5)
shape = SubResource("CapsuleShape2D_gdc0o")

[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
